syntax = "proto3";

package valvota;

message SubmitVotesRequest {
    double region = 1;
    repeated double vote_counts = 2;
}

message SubmitVotesResponse {
    bool success = 1;
    string message = 2;
}

service SubmitVotesService {
    rpc SubmitVotes (SubmitVotesRequest) returns (SubmitVotesResponse);
}
